# sdl2-dev-tut

./: .gitignore  .ycm_extra_conf.py  Bullet.cpp  Bullet.h  CMakeLists.txt  Errors.cpp  Errors.h  GLSLProgram.cpp  GLSLProgram.h  IOManager.cpp  IOManager.h  ImageLoader.cpp  ImageLoader.h  MainGame.cpp  MainGame.h  Makefile  README.md  ResourceManager.h  Sprite.cpp  Sprite.h  TextureCache.cpp  TextureCache.h  Vertex.h  main.cpp  mainoutput  picoPNG.cpp  picoPNG.h
Myengine/: .Vertex.h.kate-swp  CMakeLists.txt  Camera2D.cpp  Camera2D.h  Errors.cpp  Errors.h  GLSLProgram.cpp  GLSLProgram.h  GLTexture.h  IOManager.cpp  IOManager.h  ImageLoader.cpp  ImageLoader.h  InputManger.cpp  InputManger.h  Myengine.cpp  Myengine.h  ResourceManager.cpp  ResourceManager.h  Sprite.cpp  Sprite.h  SpriteBatch.cpp  SpriteBatch.h  TextureCache.cpp  TextureCache.h  Timer.cpp  Timer.h  Vertex.h  Window.cpp  Window.h  picoPNG.cpp  picoPNG.h
Zombie/: Agent.cpp  Agent.h  Bullet.cpp  Bullet.h  Gun.cpp  Gun.h  Human.cpp  Human.h  Level.cpp  Level.h  Player.cpp  Player.h  Zombie.cpp  Zombie.h
shaders/: colorShading.frag  colorShading.vert
